# PiscinePython

./: Hello.py  format_ft_time.py
training0/: Loading.py  NULL_not_found.py  building.py  filterstring.py  find_ft_type.py  ft_filter.py  sos.py  test_ft_filter.py  test_loading.py  whatis.py
training0/ex09/: LICENSE  README.md  pyproject.toml
training0/ex09/ft_package/: __init__.py
training0/ex09/ft_package.egg-info/: PKG-INFO
