[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A tiny example package that counts occurrences in a list."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [
  { name = "Your Name", email = "you@example.com" },
]

keywords = ["example", "education", "count", "list"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/your-name/ft_package"
